welcome.lessons.welcome.conditions.Conditions.scala.error
Program:1: error: not found: value buggle
buggle=0
^Program:4: error: not found: value buggle
  buggle=buggle+1
  ^Program:7: error: not found: value buggle
  buggle=buggle+1
  ^